registry directory configuration

--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -1,5 +1,6 @@
 paths:
     verticals:          './vert'
+    registry:           './registry'
     compiled-corpora:   './manatee'
 tools:
     unitok:             ''
