using treetagger for adding POS tags and lemmata (en, de, fr, it)

--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -3,7 +3,8 @@ paths:
     registry:           './registry'
     compiled-corpora:   './manatee'
 tools:
-    unitok:             ''
     desamb:             ''
+    treetagger:         ''
+    unitok:             ''
 
 
