environment configuration description update

--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -3,8 +3,9 @@ paths:
     registry:           './registry'
     compiled-corpora:   './manatee'
 tools:
+    unitok:             ''
     desamb:             ''
     treetagger:         ''
-    unitok:             ''
+    treetagger-en:      ''
 
 
