new testcase for wikimarkup extracting (testing non-ascii trails in links)

--- a/wikicorpus/tests/test-samples-wikimarkup.yaml
+++ b/wikicorpus/tests/test-samples-wikimarkup.yaml
@@ -43,7 +43,7 @@
 - id:         4
   title:      some words and a link
   url_prefix: http://en.wikipedia.org/wiki
-  text:       "some words and a [[link]]"
+  text:       "some words and a [[link]] and some another words"
 
   result: |
           <doc id="4" url="http://en.wikipedia.org/wiki/Some_words_and_a_link" title="some words and a link">
@@ -51,7 +51,7 @@
           <term wuri="Some_words_and_a_link">some words and a link</term>
           </p>
           <p>
-          some words and a <term wuri="Link">link</term>
+          some words and a <term wuri="Link">link</term> and some another words
           </p>
           </doc>
 # ----------------------------------------------------------------------------
@@ -116,6 +116,20 @@
           </p>
           <p>
           <term wuri="Copy_edit">copy editors</term>
+          </p>
+          </doc>
+# ----------------------------------------------------------------------------
+- id:         7
+  title:      link with non-ascii trail
+  url_prefix: http://cs.wikipedia.org/wiki
+  text:   "spousta [[vesmír]]ných těles"
+  result: |
+          <doc id="7" url="http://cs.wikipedia.org/wiki/Link_with_non-ascii_trail" title="link with non-ascii trail">
+          <p heading="1">
+          <term wuri="Link_with_non-ascii_trail">link with non-ascii trail</term>
+          </p>
+          <p>
+          spousta <term wuri="Vesmír">vesmírných</term> těles
           </p>
           </doc>
 # ----------------------------------------------------------------------------
