--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 PyYAML==3.11
 argparse==1.2.1
 lxml==3.4.0
-mwparserfromhell==0.3.3
-nltk==2.0.4
+#mwparserfromhell==0.3.3
+#nltk==2.0.4
 nose==1.3.4
-numpy==1.8.2
-wsgiref==0.1.2
+#numpy==1.8.2
+#wsgiref==0.1.2
