sentence tagging after unitok tokenization

--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -4,6 +4,7 @@ paths:
     compiled-corpora:   './manatee'
 tools:
     unitok:             ''
+    sentence-tagger:    ''
     desamb:             ''
     treetagger:         ''
     treetagger-en:      ''
