--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -2,6 +2,7 @@ paths:
     verticals:          './vert'
     registry:           './registry'
     compiled-corpora:   './manatee'
+    logfile:            './wikicorpora.log'
 tools:
     unitok:             ''
     sentence-tagger:    ''
