--- a/wikicorpus/tests/test-samples-wikimarkup.yaml
+++ b/wikicorpus/tests/test-samples-wikimarkup.yaml
@@ -231,7 +231,11 @@
           <p heading="1">
           <term wuri="List">list</term>
           </p>
-
+          <p>aaa</p>
+          <p>bbb</p>
+          <p>cc</p>
+          <p>dd</p>
+          <p>eee</p>
           </doc>
 # ----------------------------------------------------------------------------
 - id:         15
