crutial changes to enable support for all languages

--- a/environment-config-default.yaml
+++ b/environment-config-default.yaml
@@ -3,11 +3,11 @@ paths:
     registry:           './registry'
     compiled-corpora:   './manatee'
     logfile:            './wikicorpora.log'
-tools:
-    unitok:             ''
-    sentence-tagger:    ''
-    desamb:             ''
-    treetagger:         ''
-    treetagger-en:      ''
+#tools:
+#    unitok:             ''
+#    sentence-tagger:    ''
+#    desamb:             ''
+#    treetagger:         ''
+#    treetagger-en:      ''
 
 
