registry templates taken out of version control

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ configuration-example-alba.yaml
 # Ephemeral info etc.
 info/
 local/
+registry/registry-templates/*
 questions.txt
 
 # Byte-compiled / optimized / DLL files
